--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <include scr="header.html"></include>
-    <main>My content</main>
+    <main>My content 2</main>
   </body>
 </html>
