--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <include scr="header.html"></include>
+    <include src="src/header.html"></include>
     <main>My content 2</main>
   </body>
 </html>
